--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/src/components/assets/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
      content="Turn your text into stunning images with our easy-to-use text-to-image creation tool. Perfect for enhancing website content and social media posts"
     />
-    <title>React App</title>
+    <title>OpenAi Text to Image Generator</title>
   </head>
   <body>
    
