--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/src/components/assets/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,6 +9,8 @@
      content="Turn your text into stunning images with our easy-to-use text-to-image creation tool. Perfect for enhancing website content and social media posts"
     />
     <title>OpenAi Text to Image Generator</title>
+     <link rel="shortcut icon" href="/src/components/assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/src/components/assets/favicon.ico" type="image/x-icon">
   </head>
   <body>
    
